src/test/deca/syntax/invalid/class/method/missing_close_brace_13.deca
// Description:
//    Tests a syntactically incorrect program for a method declaration missing a close brace
//
// Results:
//    Line 13 : Error, expected '}'.
//
// History:
//    created on 07/01/2025

class TestClass {
    void methodName() {
        int a = 10;
}